# NLPBeginner

./: .gitignore  CMakeLists.txt  readme.md
algorithm/: leetcode_debug.cpp  longestCommonSequence.cpp  start.cpp
courses/nlp_course/: auto_scrape_novel.py  compute_entropy.py
courses/nlp_course/homework1/: auto_scrape_novel.py  readme.md  scrape_english_novel.py
csapp/Chapter10 SystemIO/: CMakeLists.txt  bus_dispatching.c  open_file.c  run.sh
debug_usage/: expand_list.c
